--- a/source/_inc/layouts/immersive/item-options-menu.html
+++ b/source/_inc/layouts/immersive/item-options-menu.html
@@ -7,7 +7,7 @@
         </button>
         <button #bookmark-add-btn layout="row center-left">
             <i class="material-icons">bookmark_add</i>
-            <span></span>
+            <span>Save</span>
         </button>
         <button #bookmark-remove-btn layout="row center-left">
             <i class="material-icons" style="color: blue;">bookmark_remove</i>
